--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html data-framework="vue">
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>vue-chat</title>
   </head>
+
   <body>
     <noscript>
       <strong>We're sorry but vue-chat doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div class="chat-app">
+      <div class="navbar sticky-top bg-dark mb-2">
+        <span class="navbar-brand text-white">Chat</span>
+      </div>
+      <div class="container">
+        <div class="row" v-for="message in messages" 
+          :class="{
+            'justify-content-start': !isMyName(message.name),
+            'justify-content-end': isMyName(message.name)
+          }">
+          <div class="col-6 mb-3">
+            <div class="mb-2" :class="{'text-left': !isMyName(message.name), 'text-right': isMyName(message.name)}">{{message.name}}</div>
+            <div class="card mb-2">
+              <div class="card-body">
+                <span>{{message.message}}</span>
+              </div>
+            </div>
+            <div :class="{'text-left': !isMyName(message.name), 'text-right': isMyName(message.name)}">{{message.timeStamp}}</div>
+          </div>
+        </div>
+      </div>
+      <div class="w-100 fixed-bottom bg-dark">
+          <div class="container my-2">
+            <div class="form-group row justify-content-center">
+              <div class="col-10">
+                <input type="text" placeholder="input" class="form-control" id="postContents" v-model="newMessage" @keyup.enter="addMessage">
+              </div>
+              <div class="col-2 d-flex justify-content-center">
+                <button type="button" class="btn btn-primary" @click="addMessage">Send</button>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+    <script src="../node_modules/vue/dist/vue.js"></script>
+    <script src="../src/js/app.js"></script>
   </body>
+
 </html>
