--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,9 @@
           <div class="container my-2">
             <div class="form-group row justify-content-center">
               <div class="col-10">
-                <input type="text" placeholder="input" class="form-control" id="postContents" v-model="newMessage" @keyup.enter="addMessage">
+                <input type="text" placeholder="input" class="form-control" 
+                  id="postContents" v-model="newMessage" @keyup.enter="addMessage"
+                  autocomplete="off">
               </div>
               <div class="col-2 d-flex justify-content-center">
                 <button type="button" class="btn btn-primary" @click="addMessage">Send</button>
